<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.app.driver.fragments.ResetPassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_container"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@color/white"
        android:layout_marginEnd="@dimen/dp_20">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_head_password"
            android:id="@+id/tv_heading_reset"
            android:gravity="center"
            style="@style/heading_text"
            android:paddingBottom="10dp"
            android:paddingTop="8dp" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_old_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_22"
            android:textColorHint="@color/text_heading_color"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:layout_below="@+id/tv_heading_reset"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_old_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm/\!@#$%*|?"
                android:inputType="textPassword"
                style="@style/edit_text"
                android:hint="@string/old_password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_new_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_18"
            android:textColorHint="@color/text_heading_color"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:layout_below="@+id/text_old_password"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_new_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_text"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm/\!@#$%*|?"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:hint="@string/new_password"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_confirm_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_18"
            android:textColorHint="@color/text_heading_color"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:layout_below="@+id/text_new_password"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_confirm_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_text"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnm/\!@#$%*|?"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:hint="@string/text_confirm_password"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit__reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_75"
            android:paddingBottom="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_20"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:text="@string/txt_submit"
            style="@style/btn_style"
            android:layout_below="@+id/text_confirm_password"/>

    </RelativeLayout>

</FrameLayout>
