<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="30dp"
    android:paddingLeft="8dp"
    android:paddingBottom="20dp"
    android:background="@color/appcolor">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/drawer_header">
        <RelativeLayout
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:paddingLeft="3dp"
            android:layout_marginTop="10dp"
            android:id="@+id/rl_profile_edt_img">
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:scaleType="centerCrop"
                android:src="@drawable/driver"
                android:id="@+id/img_drawer_image"
                app:riv_oval="true"
                app:riv_border_color="@color/btn_pressed_Color"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/profile_edit_img"
                android:layout_marginEnd="-8dp"
                android:src="@drawable/profile_edit"/>
</RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_container"
            android:paddingTop="13dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/rl_profile_edt_img">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="@dimen/medium_text"
                android:id="@+id/username"
                android:text="VANESSA DONOVAN"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:id="@+id/userEmail"
                android:textSize="@dimen/small_text"
                android:text="vanasa_dono@gmail.com"
                />

        </LinearLayout>

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/drawer_header"
    android:layout_weight="13"
    android:weightSum="11"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/menu_delivery"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/delivery"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:id="@+id/txt_delivery"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_deliveries"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/payment_card"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:id="@+id/txt_payment_info"
        android:gravity="center_vertical"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_payment_info"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/menu_scheduled"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/schedule"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="#ffffff"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:id="@+id/txt_sheldule"

        android:textSize="@dimen/medium_text"
        android:text="@string/txt_schedule"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/menu_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/setting"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_setting"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/invite_and_earn_container"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/invite"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_invite_earn"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/contactus_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/contact_us"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_contactus"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/aboutus_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/about_us"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_about_us"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/privacy_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/privacy"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_privacy_policy"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/change_password_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/change_pass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_change_password"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/faq_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/faq"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_faq"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:id="@+id/help_container"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/help"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="@dimen/medium_text"
        android:text="@string/txt_help"/>
        </LinearLayout>
</LinearLayout>
</RelativeLayout>
